# autonomous

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.beads/: metadata.json
codex_traces/codex-approval-request/: comparison-summary.md  meta.json  normalized.jsonl  prompt.txt  raw.jsonl  stdout.txt
codex_traces/codex-project-structure-analysis/: meta.json  raw.jsonl  stderr.txt
codex_traces/codex-readme-inspection/: meta.json  stderr.txt  stdout.txt
codex_traces/codex-request-user-input-choice/: meta.json  stdout.txt
codex_traces/codex-review-current-changes/: meta.json  prompt.txt  raw.jsonl  stderr.txt
docs/: codex_trace_tuning.md  release-checklist.md
evals/: core_prompt_families.json  golden_suite.json
scripts/: roma_bridge.mjs
tests/: test_adaptive.py  test_app.py  test_app_project_analysis.py  test_app_roma.py  test_app_roma_fastpath.py  test_app_roma_memory.py  test_app_roma_resume.py  test_app_roma_retry.py  test_app_roma_selection.py  test_approval_flow.py  test_baseline.py  test_cli.py  test_codex_families.py  test_compare.py  test_config.py  test_delta.py  test_examples.py  test_exec_normalizer.py  test_fixtures.py  test_live_capture.py  test_memory.py  test_orchestration.py  test_orchestration_artifacts.py  test_policy.py  test_postprocess.py  test_project_analysis_ranking.py  test_regression.py  test_repl_helpers.py  test_resume_flow.py  test_review.py  test_roma_runtime.py  test_schema.py  test_scoring.py  test_sessions.py  test_strategy.py  test_tui_app.py  test_tui_state.py  test_verification.py  test_workflow.py
(+141 files in other folders)
